src/test/ui/associated-consts/defaults-cyclic-fail.stderr
error[E0391]: cycle detected when const-evaluating + checking `Tr::A`
  --> $DIR/defaults-cyclic-fail.rs:5:5
   |
LL |     const A: u8 = Self::B;
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires const-evaluating + checking `Tr::B`...
  --> $DIR/defaults-cyclic-fail.rs:8:5
   |
LL |     const B: u8 = Self::A;
   |     ^^^^^^^^^^^^^^^^^^^^^^
   = note: ...which again requires const-evaluating + checking `Tr::A`, completing the cycle
note: cycle used when const-evaluating + checking `main::promoted[1]`
  --> $DIR/defaults-cyclic-fail.rs:14:1
   |
LL | fn main() {
   | ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
